# 0-hummingbot

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  build.rs
examples/: simple_market_maker.0
graphs/components/: order_executor.0  position_manager.0  risk_check.0
graphs/connectors/: .gitkeep  binance.0
graphs/strategies/: .gitkeep  arbitrage.0
graphs/strategies/execution/: iceberg.0  twap.0  vwap.0
graphs/strategies/market_making/: avellaneda_mm.0  grid_mm.0  pure_mm.0
schema/: trading.capnp
src/: main.rs  runtime.rs
src/composer/: linker.rs  mod.rs
src/connectors/: auth.rs  error.rs  mod.rs  types.rs  websocket.rs
src/connectors/cex/: mod.rs
src/connectors/cex/binance/: mod.rs  rest.rs  ws.rs
src/connectors/cex/okx/: mod.rs  rest.rs  ws.rs
src/connectors/dex/: mod.rs
src/connectors/dex/dydx/: client.rs  mod.rs  signing.rs
src/connectors/dex/hyperliquid/: api.rs  mod.rs  signing.rs  types.rs
src/connectors/dex/jupiter/: api.rs  mod.rs  signing.rs
src/pco/: builder.rs  mod.rs  verifier.rs
src/resolvers/: http.rs  mod.rs
src/resolvers/exchange/: binance.rs  mod.rs
src/wallet/: cosmos.rs  evm.rs  mod.rs  solana.rs
tests/: conformance.rs
