[package]
name = "zero-hummingbot"
version = "0.1.0"
edition = "2021"
description = "High-frequency crypto trading bot in 0-lang"
license = "Apache-2.0"
repository = "https://github.com/0-protocol/0-hummingbot"

[[bin]]
name = "0-hummingbot"
path = "src/main.rs"

[dependencies]
# 0-lang runtime
zerolang = { path = "../0-lang" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Crypto
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"

# Decimal precision for financial math
rust_decimal = "1.36"

# Cap'n Proto (for schema)
capnp = "0.20"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
capnpc = "0.20"

[dev-dependencies]
tokio-test = "0.4"
